fixes gallery modal sizing bug on tablets

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -674,10 +674,6 @@ a {
 	.zoom_wrapper {
 		top: 40px;
 	}  
-	.modal {
-		margin: auto;
-		width: 75%;
-	}
 	.midsize {
 		font-size: 14pt;
 	}
